# G4CMP_phonon_Qubits

./: CMakeLists.txt  g4cmpPhonon.cc
include/: PhononDetectorConstruction.hh  PhononPhysicslist.hh  PhononPrimaryGeneratorAction.hh  PhononSensitivity.hh
src/: PhononDetectorConstruction.cc  PhononPhysicslist.cc  PhononPrimaryGeneratorAction.cc  PhononSensitivity.cc
